@@ -472,7 +472,7 @@ Ross Light
 Shawn Ligocki
 Martin Ligr
 Christopher Lindblad
-Bjorn Lindqvist
+Björn Lindqvist
 Per Lindqvist
 Eric Lindvall
 Gregor Lingl
