@@ -36,6 +36,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #1100562: Fix deep-copying of objects derived from the list and
+  dict types.  Patch by Michele Orrù and Björn Lindqvist.
+
 - Issue #7005: Fixed output of None values for RawConfigParser.write and
   ConfigParser.write.
 
